--- a/css/layout.css
+++ b/css/layout.css
@@ -2,6 +2,7 @@
 /* MARGIN MIXINS */
 /* PADDING MIXINS */
 /* CLEARFIX MIXIN */
+/* MIN HEIGHT */
 @media only screen and (max-width: 480px) {
   h1, h2, h3, h4, h5, h6 {
     text-transform: uppercase; } }
@@ -34,6 +35,7 @@ header {
 /* MARGIN MIXINS */
 /* PADDING MIXINS */
 /* CLEARFIX MIXIN */
+/* MIN HEIGHT */
 @media only screen and (max-width: 480px) {
   h1, h2, h3, h4, h5, h6 {
     text-transform: uppercase; } }
@@ -115,6 +117,7 @@ nav.nav-container {
 /* MARGIN MIXINS */
 /* PADDING MIXINS */
 /* CLEARFIX MIXIN */
+/* MIN HEIGHT */
 @media only screen and (max-width: 480px) {
   h1, h2, h3, h4, h5, h6 {
     text-transform: uppercase; } }
@@ -171,6 +174,7 @@ section, .content-container {
 /* MARGIN MIXINS */
 /* PADDING MIXINS */
 /* CLEARFIX MIXIN */
+/* MIN HEIGHT */
 @media only screen and (max-width: 480px) {
   h1, h2, h3, h4, h5, h6 {
     text-transform: uppercase; } }
@@ -191,6 +195,7 @@ footer, .footer, #footer {
 /* MARGIN MIXINS */
 /* PADDING MIXINS */
 /* CLEARFIX MIXIN */
+/* MIN HEIGHT */
 @media only screen and (max-width: 480px) {
   h1, h2, h3, h4, h5, h6 {
     text-transform: uppercase; } }
@@ -210,11 +215,12 @@ section, .content-container {
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center; }
-  section:before, section:after, .content-container:before, .content-container:after {
-    content: " ";
-    display: block; }
-  section:after, .content-container:after {
-    clear: both; }
+  section::after, .content-container::after {
+    display: block;
+    clear: both;
+    line-height: 0;
+    height: 0;
+    content: " "; }
 
 section > article, section > .content,
 .content-container > article, .content-container > .content,
@@ -229,17 +235,14 @@ footer, .footer, #footer {
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center; }
-  section > article:before, section > article:after, section > .content:before, section > .content:after,
-  .content-container > article:before,
-  .content-container > article:after, .content-container > .content:before, .content-container > .content:after,
-  footer:before,
-  footer:after, .footer:before, .footer:after, #footer:before, #footer:after {
-    content: " ";
-    display: block; }
-  section > article:after, section > .content:after,
-  .content-container > article:after, .content-container > .content:after,
-  footer:after, .footer:after, #footer:after {
-    clear: both; }
+  section > article::after, section > .content::after,
+  .content-container > article::after, .content-container > .content::after,
+  footer::after, .footer::after, #footer::after {
+    display: block;
+    clear: both;
+    line-height: 0;
+    height: 0;
+    content: " "; }
   @media only screen and (min-width: 480px) and (max-width: 767px) {
     section > article, section > .content,
     .content-container > article, .content-container > .content,
@@ -340,15 +343,13 @@ footer, .footer, #footer {
         -ms-flex-preferred-size: 100%;
         flex-basis: 100%; } }
 
-section > aside:before, section > aside:after, section > .aside:before, section > .aside:after,
-.content-container > aside:before,
-.content-container > aside:after, .content-container > .aside:before, .content-container > .aside:after {
-  content: " ";
-  display: block; }
-
-section > aside:after, section > .aside:after,
-.content-container > aside:after, .content-container > .aside:after {
-  clear: both; }
+section > aside::after, section > .aside::after,
+.content-container > aside::after, .content-container > .aside::after {
+  display: block;
+  clear: both;
+  line-height: 0;
+  height: 0;
+  content: " "; }
 
 section > aside p, section > aside span, section > aside blockquote, section > aside div, section > aside ul, section > aside ol, section > .aside p, section > .aside span, section > .aside blockquote, section > .aside div, section > .aside ul, section > .aside ol,
 .content-container > aside p,
