--- a/css/library.css
+++ b/css/library.css
@@ -1288,10 +1288,7 @@ html[xmlns] .cf {
 */
 .text-col-1 {
   -webkit-columns: 1;
-  columns: 1;
-  word-break: break-all;
-  word-wrap: break-word;
-  overflow: hidden; }
+  columns: 1; }
   .text-col-1::after {
     display: block;
     clear: both;
@@ -1301,10 +1298,7 @@ html[xmlns] .cf {
 
 .text-col-2 {
   -webkit-columns: 2;
-  columns: 2;
-  word-break: break-all;
-  word-wrap: break-word;
-  overflow: hidden; }
+  columns: 2; }
   .text-col-2::after {
     display: block;
     clear: both;
@@ -1314,10 +1308,7 @@ html[xmlns] .cf {
 
 .text-col-3 {
   -webkit-columns: 3;
-  columns: 3;
-  word-break: break-all;
-  word-wrap: break-word;
-  overflow: hidden; }
+  columns: 3; }
   .text-col-3::after {
     display: block;
     clear: both;
@@ -1326,15 +1317,12 @@ html[xmlns] .cf {
     content: " "; }
   @media only screen and (max-width: 480px) {
     .text-col-3 {
-      -webkit-columns: 2;
-      columns: 2; } }
+      -webkit-columns: 1;
+      columns: 1; } }
 
 .text-col-4 {
   -webkit-columns: 4;
-  columns: 4;
-  word-break: break-all;
-  word-wrap: break-word;
-  overflow: hidden; }
+  columns: 4; }
   .text-col-4::after {
     display: block;
     clear: both;
@@ -1343,15 +1331,12 @@ html[xmlns] .cf {
     content: " "; }
   @media only screen and (max-width: 480px) {
     .text-col-4 {
-      -webkit-columns: 2;
-      columns: 2; } }
+      -webkit-columns: 1;
+      columns: 1; } }
 
 .text-col-5 {
   -webkit-columns: 5;
-  columns: 5;
-  word-break: break-all;
-  word-wrap: break-word;
-  overflow: hidden; }
+  columns: 5; }
   .text-col-5::after {
     display: block;
     clear: both;
@@ -1365,15 +1350,12 @@ html[xmlns] .cf {
       columns: 2; } }
   @media only screen and (max-width: 480px) {
     .text-col-5 {
-      -webkit-columns: 2;
-      columns: 2; } }
+      -webkit-columns: 1;
+      columns: 1; } }
 
 .text-col-6 {
   -webkit-columns: 6;
-  columns: 6;
-  word-break: break-all;
-  word-wrap: break-word;
-  overflow: hidden; }
+  columns: 6; }
   .text-col-6::after {
     display: block;
     clear: both;
@@ -1387,8 +1369,8 @@ html[xmlns] .cf {
       columns: 2; } }
   @media only screen and (max-width: 480px) {
     .text-col-6 {
-      -webkit-columns: 2;
-      columns: 2; } }
+      -webkit-columns: 1;
+      columns: 1; } }
 
 .grow-1 {
   -webkit-box-flex: 1;
